# py-paramstream

./: .gitignore  LICENSE  README.md  pyproject.toml
src/paramstream/: __init__.py  _conversion.py  core.py
