[project]
name = "py-paramstream"
version = "0.0.3"
description = "Python interface to the R package paramstream for parameter-based run tracking in reproducible data analysis workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Benjamin Vallin", email = "ben.vallin@gmail.com" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: R",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
]

dependencies = [
  "rpy2>=3.5",
  "pandas>=1.5"
]

[project.urls]
Homepage = "https://github.com/benvallin/py-paramstream"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

